<resources>
    <string name="app_name">Demo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_medlynk">Welcome to Medlynk</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_explanation">Please enter Email and Birth Date and click on \"Send Reset Password Link\" button.</string>
    <string name="birth_date">Birth Date</string>
    <string name="send_reset_password_link">Send Reset Password Link</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="new_account">New Account</string>
    <string name="provide_new_account_info">Please provide details below to create your new Medlynk account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name (Optional)</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirmation_email">A confirmation email is sent to you</string>
    <string name="welcome_page_first_text">Medlynk will assist you in providing information to your doctor.</string>
    <string name="welcome_page_second_text">On the next screen, you will be able to search for your doctor\'s account. Don\'t worry if you can\'t find their account number, you will still be able to use Medlynk. We\'ll guide you through this.</string>
    <string name="get_started">OK, Let\'s Start</string>
    <string name="go_to_questions">Go to question set already in progress</string>
    <string name="enter_doctor_id">Please enter your doctor</string>
    <string name="id">identification number (ID)</string>
    <string name="example_doctor_id">Ex: 1234567</string>
    <string name="search">Search</string>
    <string name="search_text">Or select a doctor identification number (ID) that you searched before:</string>
    <string name="do_not_know_dr_id">I DON\'T KNOW MY DOCTOR ID</string>
    <string name="no_intenet_connection">No Intenet Connection!</string>
    <string name="try_again">Try Again</string>
    <string name="somethig_went_wrong">Something Went Wrong!</string>
    <string name="timeout_exception">Timed out Operation!</string>
    <string name="something_bad_happened">Something bad happened :(</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://medlynk.tk\",\n  }\n}]</string>
    <string name="doctor_id">Doctor ID:</string>
    <string name="doctor_phone_number">Phone Number:</string>
    <string name="doctor_bio">Bio:</string>
    <string name="question_set_clue">In preparation for your doctor appointment, please select an option below that most closely matches the reason for your visit</string>
    <string name="discuss_a_new_symptom">To discuss a new symptom</string>
    <string name="refill_notes">This questionnaire will collect some important background information from you regarding any medication you need a refill for. You will be prompted to complete it once for EACH medication that you need refilled.</string>
    <string name="refill_button">OK, Let\'s Start</string>
    <string name="refill_toolbar_text">Refill A Medication</string>
    <string name="more_discuss_start_symptom">What if I have more to discuss?</string>
    <string name="see_more"><i><u>see more</u></i></string>
    <string name="no_option_is_suitable_in_appointments">What if none of the options are suitable for my appointment?</string>
    <string name="how_to_proceed_no_doctor_id"><b>Here's how to proceed:</b></string>
    <string name="no_doctor_id_process_1">Using the button below you can still access all the question sets, and fill in your responses. At the end, you will have the option to PRINT your information. You will need a printer on your local network to do this.</string>
    <string name="no_doctor_id_process_2">Once you have printed your information, bring this with you to your doctor appointment, and provide the printout to reception as soon as you arrive. Although we cannot make any guarantees, the vast majority of offices will take your printout, and your doctor will have the opportunity to review this before beginning your visit.</string>
    <string name="no_doctor_id_process_3">When you print your information, it will not only show your responses, but also a medical style note that is formatted in a way that is easy for your doctor to review.</string>
    <string name="no_doctor_id_process_4">Got it! Next time when I click on the link \"I don\'t know my doctor ID\", skip the current page.</string>
    <string name="no_doctor_id">No Doctor ID</string>
    <string name="go_to_questions_no_doctor_id">Go to Questions</string>
    <string name="new_symptom">NEW SYMPTOM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="skip">skip</string>
    <string name="see_more_new_symptom_first_question"><b>(For now, try to pick the most bothersome symptom only.)</b></string>
    <string name="new_symptom_first_question">What is the <b><i>main</i></b> symptom that is concerning you today?</string>
    <string name="new_symptom_second_question">Please briefly describe if you think there was something that made the symptom start (such as an injury)?</string>
    <string name="new_symptom_third_question">How long ago did this symptom start?\n(* if this has been a recurrent symptom, please focus on the CURRENT episode only for now)</string>
    <string name="new_symptom_fourth_question">How frequently does this symptom bother you?</string>
    <string name="new_symptom_fifth_question">How intense is the symptom?</string>
    <string name="new_symptom_seventh_question">Please describe how your symptom affects you on your best days.</string>
    <string name="new_symptom_eighth_question">Is there anything you have noted that makes the symptom worse?\n(Ex - rest, sleep, eating, fluid intake, exercise)</string>
    <string name="new_symptom_ninth_question">Please list any other symptoms you are having that you are concerned may be related to this one.</string>
    <string name="new_symptom_tenth_question">Overall, is the symptom getting:</string>
    <string name="new_symptom_eleventh_question">Have you had any:</string>
    <string name="new_symptom_twelve_question">Please indicate what treatments you have tried so far (please select all treatments previously tried):</string>
    <string name="new_symptom_thirteen_question">Please list medications tried</string>
    <string name="new_symptom_fourteen_question">Any recent changes in your regular medications?</string>
    <string name="new_symptom_fifteen_question">Any new supplements/non-prescribed herbs etc that you recently started taking?</string>
    <string name="new_symptom_sixteen_question">What makes you particularly concerned about this symptom today? (can pick more than one here)</string>
    <string name="new_symptom_seventeen_question">Have you had this symptom in the past?</string>
    <string name="new_symptom_eighteen_question">How long does the symptom last when it occurs?</string>
    <string name="new_symptom_nineteen_question">What makes you particularly concerned about <b><u>this particular</u></b> episode? (can pick more than one here)</string>
    <string name="new_symptom_twenty1_question">Please list any medications you have tried for<b><u>past</u></b> episodes:</string>
    <string name="new_symptom_twenty2_question">Please indicate what treatments you have tried for <b><u>past</u></b> episodes (please select all treatments previously tried):</string>
    <string name="type_answer_here">Type answer here</string>
    <string name="or"><b>Or</b></string>
    <string name="i_do_not_know">I don\'t know</string>
    <string name="year_ago"><b>Years</b> Ago</string>
    <string name="months_ago"><b>Months</b> Ago</string>
    <string name="weeks_ago"><b>Weeks</b> Ago</string>
    <string name="days_ago"><b>Days</b> Ago</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="Severe">Severe</string>
    <string name="worst_day">Worst Day</string>
    <string name="best_day">Best Day</string>
    <string name="under_development"><b><i>Be Careful baby! :)\nUnder Development...</i></b></string>
    <string name="congratulations"><b><i>Congratulations</i></b></string>
    <string name="congratulations_text">You have just completed a <b>New Symptom</b> questions!</string>
    <string name="no">No</string>
    <string name="yes_type_here">(Yes) type here</string>
    <string name="go_to_question_set">Go To Question Set</string>
    <string-array name="question_3_choices">
        <item>Today</item>
        <item>I don't know</item>
    </string-array>
    <string-array name="question_4_choices">
        <item>Constantly</item>
        <item>Everyday</item>
        <item>Almost Every day</item>
        <item>A few times per day</item>
        <item>A few times per week</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>One-two times per year</item>
        <item>A few times ever</item>
        <item>Varies quite a bit</item>
    </string-array>
    <string name="question_10_choice">Have not noted any</string>
    <string name="every">Every</string>
    <string name="years">years</string>
    <string-array name="question_6_7_choices">
        <item>Can not get out of bed</item>
        <item>Can barely get of bed</item>
        <item>Can do a few simple chores \n at home, but not much more</item>
        <item>Can do chores at home but cannot get out to do very much</item>
        <item>Can go out but cannot manage any errands</item>
        <item>Can go out, but cannot manage manage some errands</item>
        <item>Can go out, do errands, but nothing intense, and do exercise</item>
        <item>Can go out, do errands and light exercise, but no strenuous exercise</item>
        <item>Can do whatever I usually do</item>
    </string-array>
    <string-array name="question_8_choices">
        <item>Haven't noted anything that makes it worse</item>
        <item>Rest</item>
        <item>Sleep</item>
        <item>Exercise</item>
        <item>Other</item>
    </string-array>
    <string-array name="question_9_choices">
        <item>Haven't noted anything that makes it worse</item>
        <item>Rest</item>
        <item>Sleep</item>
        <item>Eating</item>
        <item>Other</item>
    </string-array>
    <string-array name="question_11_choices">
        <item>Better</item>
        <item>Worse</item>
        <item>Staying the same</item>
        <item>Fluctuating</item>
        <item>Other</item>
    </string-array>
    <string-array name="question_12_choices">
        <item>Fever</item>
        <item>Unplanned weight loss</item>
        <item>Night sweats</item>
        <item>New or worsening fatigue <b><u>together</u></b> with the main symptom today</item>
        <item>None of the above</item>
    </string-array>
    <string-array name="question_13_22_choices">
        <item>Home stretches</item>
        <item>Physiotherapist</item>
        <item>Message therapist</item>
        <item>Acupuncturist</item>
        <item>Psychologist</item>
        <item>Chiropractor</item>
        <item>Other</item>
        <item>Have not tried anything</item>
    </string-array>
</resources>