<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_send_reset_password_request"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neweraandroid.demo.Activity.SendResetPasswordRequestActivity.SendResetPasswordRequestActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBackButton"
        android:src="@drawable/ic_action_home_button"
        android:layout_alignLeft="@id/reset_password_title"
        android:layout_marginTop="@dimen/home_button_margin_top"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_title"
        android:text="@string/reset_password"
        android:textColor="@color/welcome_text_color"
        android:layout_marginLeft="@dimen/reset_margin_left"
        android:layout_marginTop="@dimen/reset_margin_up"
        android:textSize="@dimen/reset_password_text_size"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/reset_password_expl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reset_password_title"
        android:layout_below="@+id/reset_password_title"
        android:layout_marginRight="15dp"
        android:text="@string/reset_password_explanation"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmail"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:drawableLeft="@drawable/ic_action_envelop"
        android:textColorHint="@color/icons_color"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBirthDate"
        android:hint="@string/birth_date"
        android:layout_below="@id/edtEmail"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginBottom="15dp"
        android:gravity="start|center_vertical"
        android:textColorHint="@color/icons_color"
        android:drawableLeft="@drawable/ic_action_calendar"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSendResetPasswordReq"
        android:layout_below="@id/btnBirthDate"
        android:background="@drawable/custom_button_main"
        android:text="@string/send_reset_password_link"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        />

</RelativeLayout>
