<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_reset_password"
    tools:context="com.neweraandroid.demo.tk.neweraandroid.demo.Activity.ResetPassword.ResetPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBackButton"
        android:src="@drawable/ic_action_home_button"
        android:layout_alignLeft="@id/reset_password_title"
        android:layout_marginTop="@dimen/home_button_margin_top"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_title"
        android:text="@string/reset_password"
        android:textColor="@color/welcome_text_color"
        android:layout_marginLeft="@dimen/reset_margin_left"
        android:layout_marginTop="@dimen/reset_margin_up"
        android:textSize="@dimen/reset_password_text_size"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reset_password_title"
        android:layout_below="@+id/reset_password_title"
        android:layout_marginRight="15dp"
        android:text="@string/enter_new_password"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNewPassword"
        android:hint="@string/new_password"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:drawableLeft="@drawable/ic_action_password"
        android:textColorHint="@color/icons_color"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtConfirmedPassWord"
        android:hint="@string/confirm_new_password"
        android:layout_below="@id/edtNewPassword"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/icons_color"
        android:drawableLeft="@drawable/ic_action_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnResetPassword"
        android:layout_below="@id/edtConfirmedPassWord"
        android:background="@drawable/custom_button_main"
        android:text="@string/reset_my_password"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        />

</RelativeLayout>
