<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.medlynk.patient.android.Activity.Login.LoginActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:layout_marginTop="@dimen/login_welcome_text"
        android:gravity="center"
        android:text="@string/welcome_to_medlynk"
        android:textColor="@color/welcome_text_color"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_person"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/icons_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEMail"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:hint="@string/password"
        android:layoutDirection="rtl"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/icons_color" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPassword"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginRight="@dimen/login_margins_horizontally"
        android:background="@drawable/enabled_custom_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPassword"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:layout_marginTop="10dp"
        android:text="@string/create_an_account"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCreateAccount"
        android:layout_marginLeft="@dimen/login_margins_horizontally"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>